# cu-ouster

./: Cargo.toml  README.md
examples/: client.rs  lidar_listener.rs  write.rs
server/: Cargo.toml
server/data/: config.toml
server/examples/: lidar_server.rs  read.rs  scanner.rs
server/src/: client.rs  config.rs  filters.rs  handlers.rs  lib.rs  lidar.rs  main.rs  manager.rs  product.rs  scanner.rs
src/: client.rs  lib.rs  lidar.rs  main.rs  manager.rs  product.rs  scanner.rs
web/: package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: Alerts.js  App.css  App.js  Config.js  Dashboard.js  Home.js  Info.js  Loading.js  Sidebar.css  Sidebar.js  Status.js  index.css
