[package]
name = "cu-ouster"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "*"
bytes = "*"
clap = "*"
hyper = "*"
etherparse = "*"
listenfd = "*"
log = "*"
las = "*"
futures = "*"
pcap = "*"
pretty_env_logger = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
regex = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
toml = "*"
warp = "*"