[package]
name = "cu-ouster"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
etherparse = "0.9"
futures = "0.3"
las = "0.7"
log = "0.4"
pcap = "0.8"
pretty_env_logger = "0.4"
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.2", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }